Add fixed image to ophi-pain page

--- a/work/projects/ophi-pain.html
+++ b/work/projects/ophi-pain.html
@@ -28,7 +28,7 @@
 			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">OPHI 產品痛點</h3>
 			<section class="flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/ophi-pain/frame-7.jpg" alt="">
+					<a href="/images/ophi-pain/fix_rwd.jpg"><img src="/images/ophi-pain/frame-7.jpg" alt=""></a>
 				</figure>
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<img src="/images/ophi-pain/frame-8.jpg" alt="">
