Add lemma images to home page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,32 @@
 		</section>
 		<section class="projects section bg-gray sectionBorder" id="projects">
 			<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
-			<div class="ophi">
+			<div class="lemma">
+				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<h3 class="f-25">
+						LEMMA／
+						<span class="f-16">UI, UX</span>
+					</h3>
+				</div>
+				<div class="imgGroup">
+					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s">
+						<picture>
+							<source media="(max-width: 600px)" srcset="/images/lemma-small.jpg">
+							<source media="(min-width: 601px)" srcset="/images/lemma.gif">
+							<img src="images/lemma.gif">
+						</picture>
+						<a href="/work/projects/lemma.html">
+							<div class="imgMask">
+								<div class="txtBox">
+									<p class="f-25 title">LEMMA, GenAI</p>
+									<p class="f-16">UI / UX</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>	
+			</div>
+			<div class="loc pt-3">
 				<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<h3 class="f-25">
 						LOC Studio／
@@ -90,11 +115,11 @@
 					</h3>
 				</div>
 				<div class="imgGroup">
-					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
+					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s">
 						<picture>
 							<source media="(max-width: 600px)" srcset="/images/loc-small.jpg">
-							<source media="(min-width: 601px)" srcset="/images/loc.jpg">
-							<img src="images/loc.jpg">
+							<source media="(min-width: 601px)" srcset="/images/loc.gif">
+							<img src="images/loc.gif">
 						</picture>
 						<a href="/work/projects/loc.html">
 							<div class="imgMask">
@@ -115,7 +140,7 @@
 					</h3>
 				</div>
 				<div class="imgGroup">
-					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
+					<div class="imgBox animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".6s">
 						<picture>
 							<source media="(max-width: 600px)" srcset="/images/ophi-small.jpg">
 							<source media="(min-width: 601px)" srcset="/images/ophi.jpg">
@@ -140,7 +165,7 @@
 					</h3>
 				</div>
 				<div class="imgGroup">
-					<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
+					<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s">
 						<img src="/images/likestore01.jpg">
 						<a href="/work/projects/likestore-web.html">
 							<div class="imgMask">
