Modify wording of projects

--- a/work/projects/funoo-console.html
+++ b/work/projects/funoo-console.html
@@ -60,8 +60,8 @@
 						FunOO is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
 					<div class="f-15 dev-team">
-						<p>Web Design - Jessica Wu</p>
-						<p>Website Dev - Terry Yu, Diane Chou, Ji Wan Tseng</p>
+						<p>Product Version - MVP</p>
+						<p>Solo Designer - Jessica Wu</p>
 					</div>
 				</figcaption>
 				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/funoo/funoo021.jpg" alt="">
