--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -63,8 +63,7 @@
 						Provides an accurate view, electronic record-keeping to make sure the organization's growth and needs.
 					</p>
 					<div class="f-15 dev-team">
-						<p>Web Design - Jessica Wu</p>
-						<p>Website Dev - Evan Tsai, Austin Chung </p>
+						<p>Designer - Jessica Wu</p>
 					</div>
 				</figcaption>
 			</figure>
