--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -66,8 +66,8 @@
 						LOC is a data transformation system for enterprise. Stitching all of your systems, services and applications together to build end-to-end pipelines in a governable and collaborative way.
 					</p>
 					<div class="f-15 dev-team">
-						<p>Web APP Design - Jessica Wu</p>
-						<p>Engineer - Atkins Chang, RenHao Xiao, Ken Lee</p>
+						<p>Product Version - MVP</p>
+						<p>Solo Designer - Jessica Wu</p>
 					</div>
 					<p class="f-14 pt-2">
 						<img src="/images/icons/star.svg" style="width: 19px; position: relative; top: -2px; opacity: 0.7;" /> FST Network was selected one of 35 startup for <a href="https://meet.bnext.com.tw/articles/view/49618" target="_blank" style="color: rgb(90, 90, 90)">2022 Neo Star</a>
