Fix rwd layout of main visual

--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
 					<p><a href="https://tw.linkedin.com/in/jessica-wu-b6964214b" target="_blank">linkedin</a></p>
 				</div>
 			</div>
-			<p class="f-14 copyright">Copyright © 2024 by Jessica Wu</p>
+			<p class="f-14 copyright">Copyright © 2025 by Jessica Wu</p>
 		</div>
 		<div class="right-col f-13">
 			<p class="photo">
@@ -27,12 +27,12 @@
 				<span><b>Babara Hsieh</b></span>
 			</p>
 			<p class="psd">
-				Mockup material created: <br />
-				<span><b><a href="https://www.freepik.com/lcd2020" target="_blank">lcd2020</a></b></span> ／ 
+				Mockup material credits: <br />
+				<span><b><a href="https://www.freepik.com/author/lcd2020" target="_blank">lcd2020</a></b></span> ／ 
 				<span><b><a href="https://unsplash.com/@yasuhiroyokota" target="_blank">Yasuhiro Yokota</a></b></span> ／
 				<span><b><a href="https://unsplash.com/@domenicoloia" target="_blank">Domenico Loia</a></b></span> ／ 
-				<span><b><a href="https://www.freepik.com/rawpixel-com" target="_blank">rawpixel.com</a></b></span> ／
-				<span><b><a href="https://www.freepik.com/8photo" target="_blank">8photo</a></b></span>
+				<span><b><a href="https://www.freepik.com/author/rawpixel-com" target="_blank">rawpixel.com</a></b></span> ／
+				<span><b><a href="https://www.freepik.com/author/8photo" target="_blank">8photo</a></b></span>
 			</p>
 		</div>
 	</div>
