--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -77,7 +77,7 @@
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Data Transformation</h3>
+			<h3 class="f-30 txt-center pt-3 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="margin-bottom: 1rem;">Data Transformation</h3>
 			<section class="mb-0">
 				<picture class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<source media="(max-width: 600px)" srcset="/images/loc/loc002-small.jpg">
@@ -99,7 +99,7 @@
 			<h3 class="f-30 txt-center pt-3 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">How to Visualize Data?</h3>
 			<section class="section-desc flow-demo">
 				<figure class="animated wow fadeIn pt-1 txt-left" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<figcaption style="margin: 0.5rem 0.5rem 4rem">
+					<figcaption>
 						<p class="f-20 mb-1">Target Audience: <span style="color: gray">To businesses, like financial and insurance companies</span></p>
 						<p class="f-20 mb-1">Commercial Goal: <span style="color:gray">Increase user trust</span></p>
 						<p class="f-20 mb-1">Usability Goal: <span style="color:gray">Help user quickly understand the core function</span></p>
