--- a/profile-modal.html
+++ b/profile-modal.html
@@ -23,6 +23,26 @@
     <div class="career">
       <div class="period">
         <div>
+          <p class="f-20 company">Nextlink
+            <button class="btn icon icon-sm icon-border-none tooltip" onclick="location.href='work/projects/lemma.html'">
+              <img class="link" src="images/icons/arrow_up.svg" />
+              <span class="tooltip-text">LEMMA</span>
+            </button>
+          </p>
+          <p class="f-14">Apr 2025 - Jul 2025</p>
+        </div>
+        <p class="location">Taipei City</p>
+      </div>
+      <div class="description">
+        <p class="f-16 jobTitle"><b>Frontend Designer</b></p>
+        <p class="f-15">
+          LEMMA is a GenAI Chatbot for enterprise. <br>I am in charge of UI UX design, focus on enhance user experience.
+        </p>
+      </div>
+    </div>
+    <div class="career">
+      <div class="period">
+        <div>
           <p class="f-20 company">FST Network
             <button class="btn icon icon-sm icon-border-none tooltip" onclick="location.href='work/projects/loc.html'">
               <img class="link" src="images/icons/arrow_up.svg" />
