Update wording to projects

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -60,6 +60,7 @@
 						Customer Relationship Management (CRM) is a B2C marketing tool, the CRM template is flexible, includes eDM, SMS, App push.
 					</p>
 					<div class="f-15 dev-team">
+						<p>Product Version - MVP</p>
 						<p>Solo Designer - Jessica Wu</p>
 					</div>
 				</figcaption>
