--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -103,6 +103,7 @@
 						<p class="f-20 mb-1">Target Audience: <span style="color: gray">To businesses, like financial and insurance companies</span></p>
 						<p class="f-20 mb-1">Commercial Goal: <span style="color:gray">Increase user trust</span></p>
 						<p class="f-20 mb-1">Usability Goal: <span style="color:gray">Help user quickly understand the core function</span></p>
+						<p class="f-20 mb-1">User Type: <span style="color:gray">Engineers at the client company</span></p>
 						<p class="f-20">Challenge: <span style="color: gray">Provide a graphical user interface</span></p>
 					</figcaption>
 					<picture>
