--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -63,7 +63,8 @@
 						Provides an accurate view, electronic record-keeping to make sure the organization's growth and needs.
 					</p>
 					<div class="f-15 dev-team">
-						<p>Designer - Jessica Wu</p>
+						<p>Product - Growth Stage</p>
+						<p>Designer (Enhance UX) - Jessica Wu</p>
 					</div>
 				</figcaption>
 			</figure>
@@ -94,7 +95,7 @@
 			</section>
 			<div class="txt-center" style="margin-bottom:5.5rem;">
 				<button class="btn btn-outline f-15" onclick="location.href='ophi-pain.html'">
-					TAKE A LOOK
+					ENHANCE UX
 				</button>
 			</div>
 			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="border-top: thin solid rgba(0,0,0, 0.12);">Purchase Flow</h3>
