Hide book section on homepage

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="books section" id="books">
+		<!-- <section class="books section" id="books">
 			<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">books</h2>
 			<div class="bookMix">
 				<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
@@ -325,8 +325,8 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="marketing section bg-gray sectionBorder" id="marketing">
+		</section> -->
+		<section class="marketing section sectionBorder" id="marketing">
 			<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">marketing</h2>
 			<div class="banners animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
