--- a/profile-modal.html
+++ b/profile-modal.html
@@ -200,10 +200,10 @@
       <div class="period">
         <div>
           <p class="f-20 company">La Vie
-            <button class="btn icon icon-sm icon-border-none tooltip" onclick="location.href='index.html#books'">
+            <!-- <button class="btn icon icon-sm icon-border-none tooltip" onclick="location.href='index.html#books'">
               <img class="link" src="images/icons/arrow_up.svg" />
               <span class="tooltip-text">Books</span>
-            </button>
+            </button> -->
           </p>
           <p class="f-14">Jun 2013 - Apr 2015</p>
         </div>
