--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
 			<ul class="f-17">
 				<li><a href="/index.html#contentWrap">About</a></li>
 				<li><a href="/index.html#projects">Projects</a></li>
-				<li><a href="/index.html#books">Books</a></li>
+				<!-- <li><a href="/index.html#books">Books</a></li> -->
 				<li><a href="/index.html#marketing">Marketing</a></li>
 			</ul>
 			<div class="contact f-14">
