--- a/navigation.html
+++ b/navigation.html
@@ -5,7 +5,7 @@
 	<ul class="menu-mobile-hidden">
 		<li><a href="/index.html#about">ABOUT</a></li>
 		<li><a href="/index.html#projects">PROJECTS</a></li>
-		<li><a href="/index.html#books">BOOKS</a></li>
+		<!-- <li><a href="/index.html#books">BOOKS</a></li> -->
 		<li><a href="/index.html#marketing">MARKETING</a></li>
 	</ul>
 </nav>
