Enhance border radius of homepage images

--- a/footer.html
+++ b/footer.html
@@ -40,7 +40,8 @@
 <style>
   .my-footer {
     background: #7C98A3;
-    border: 1rem solid #FFFFFF;
+    border: 0.5rem solid #FFFFFF;
+    border-radius: 2rem;
     box-sizing: border-box;
     color: rgba(255, 255, 255, 0.8);
     padding: 2.5rem 1rem 3.5rem;
