--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<span class="f-25">- Atticus Finch</span>
 					</p>
 					<div class="btnGroup">
-						<button class="btn btn-primary f-13" id="btnProfile">
+						<button class="btn btn-outline f-13" id="btnProfile">
 							PROFILE
 						</button>
 						<div class="iconGroup">
