--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -98,7 +98,7 @@
 					ENHANCE UX
 				</button>
 			</div>
-			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="border-top: thin solid rgba(0,0,0, 0.12);">Purchase Flow</h3>
+			<!-- <h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s" style="border-top: thin solid rgba(0,0,0, 0.12);">Purchase Flow</h3>
 			<section class="section-desc flow-demo pt-2">
 				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<picture>
@@ -114,7 +114,7 @@
 						<img src="/images/ophi/ophi004.jpg" alt="">
 					</picture>
 				</figure>
-			</section>
+			</section> -->
 		</div>
 		<section class="section-demo pt-3">
 			<figure class="border-radius animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
