Add large button of work page footer

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -162,11 +162,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-identify.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-identify.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">Likestore Identify</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-console.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='funoo-console.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">FunOO Console</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
