--- a/work/projects/funoo-console.html
+++ b/work/projects/funoo-console.html
@@ -126,11 +126,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='crm.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='crm.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">CRM</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-identify.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='funoo-identify.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">FunOO Identify</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
