--- a/work/projects/funoo-identify.html
+++ b/work/projects/funoo-identify.html
@@ -35,7 +35,7 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						funoo identity
+						funoo identify
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
@@ -102,11 +102,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-console.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='funoo-console.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">FunOO Console</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='loc.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='lemma.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">LEMMA GenAI</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
