--- a/work/projects/lemma.html
+++ b/work/projects/lemma.html
@@ -131,11 +131,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-identify.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='funoo-identify.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">FunOO Identify</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='loc.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='loc.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">LOC Studio</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
