--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -35,7 +35,7 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						likestore identity
+						likestore identify
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
@@ -106,11 +106,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-console.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-console.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">Likestore Console</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='crm.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='crm.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">CRM</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
