--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -139,11 +139,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='ophi.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='ophi.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">OPHI ERP</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-console.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-console.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">Likestore Console</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
