--- a/work/projects/loc.html
+++ b/work/projects/loc.html
@@ -194,11 +194,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='funoo-identify.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='lemma.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">LEMMA GenAI</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='ophi.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='ophi.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">OPHI ERP</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
