--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -135,11 +135,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-web.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">Likestore Website</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-identify.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-identify.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">Likestore Identify</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
