--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -198,11 +198,13 @@
 		</section>
 	</div>
 	<div class="buttons">
-		<button class="btn btn-outline f-15" onclick="location.href='loc.html'">
-			PREV
+		<button class="btn btn-outline large f-15" onclick="location.href='loc.html'">
+			<span class="previous">Previous:</span>
+			<span class="f-17">LOC Studio</span>
 		</button>
-		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
-			NEXT
+		<button class="btn btn-outline large f-15" onclick="location.href='likestore-web.html'">
+			<span class="next">Next:</span>
+			<span class="f-17">likestore website</span>
 		</button>
 	</div>
 	<div class="gototop"></div>
