Update design process on `OPHI`

--- a/work/projects/ophi.html
+++ b/work/projects/ophi.html
@@ -89,12 +89,18 @@
 			</section>
 			<h3 class="f-30 txt-center pt-2 animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">Design Process</h3>
 			<section class="section-desc flow-demo mb-0">
-				<figure class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/ophi/ophi025.jpg" alt="">
+				<figure class="animated wow fadeIn pt-1 txt-left ophiDesign" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<figcaption>
+						<p class="f-20 mb-1">Target Audience: <span style="color: gray">Dental Clinics</span></p>
+						<p class="f-20 mb-1">Commercial Goal: <span style="color:gray">Reduce staff workload and focus on patient treatment</span></p>
+						<p class="f-20 mb-1">Usability Goal: <span style="color:gray">Digitize workflows</span></p>
+						<p class="f-20">Challenge: <span style="color: gray">Analyze user feedback and implement solutions</span></p>
+					</figcaption>
 				</figure>
 			</section>
-			<div class="txt-center" style="margin-bottom:5.5rem;">
-				<button class="btn btn-outline f-15" onclick="location.href='ophi-pain.html'">
+			<div class="buttons animated wow fadeIn" style="margin-bottom:5.5rem;">
+				<button class="btn btn-outline large f-15" onclick="location.href='ophi-pain.html'">
+					<span class="next">Take a look</span>
 					ENHANCE UX
 				</button>
 			</div>
